[gd_scene load_steps=6 format=3 uid="uid://bvkxkwp6j01lh"]

[ext_resource type="Script" path="res://Scenes/Components/Animated button/Old (not working well)/Button Controller.gd" id="1_qu1ul"]

[sub_resource type="Animation" id="Animation_8tscx"]
resource_name = "Button press"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BoxContainer/Button/Control:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 0.8)]
}

[sub_resource type="Animation" id="Animation_7seyj"]
resource_name = "Button release"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BoxContainer/Button/Control:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.8, 0.8), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_qi4ma"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BoxContainer/Button:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BoxContainer/Button/Control:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xyybr"]
_data = {
"Button press": SubResource("Animation_8tscx"),
"Button release": SubResource("Animation_7seyj"),
"RESET": SubResource("Animation_qi4ma")
}

[node name="Animated button" type="BoxContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -21.5
offset_right = 30.0
offset_bottom = 21.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
alignment = 1
script = ExtResource("1_qu1ul")

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
alignment = 1

[node name="Button" type="Button" parent="BoxContainer"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="Control" type="Control" parent="BoxContainer/Button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Button2" type="Button" parent="BoxContainer/Button/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -18.0
offset_top = -15.0
offset_right = 18.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"BackButton"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xyybr")
}

[connection signal="button_down" from="BoxContainer/Button" to="." method="_press_button"]
[connection signal="button_up" from="BoxContainer/Button" to="." method="_release_button"]
[connection signal="button_down" from="BoxContainer/Button/Control/Button2" to="." method="_press_button"]
[connection signal="button_up" from="BoxContainer/Button/Control/Button2" to="." method="_release_button"]
